AppComponent as standalone, add menu and some others components

--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,8 @@
                 "@schematics/angular:component": {
                     "style": "none",
                     "skipTests": true,
-                    "changeDetection": "OnPush"
+                    "changeDetection": "OnPush",
+                    "standalone": true
                 },
                 "@schematics/angular:service": {
                     "skipTests": true
