localhost server init with proxy.conf.json

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --hmr --proxy-config proxy.conf.json",
         "build": "ng build",
         "lint": "ng lint",
         "watch": "ng build --watch --configuration development",
-        "test": "ng test"
+        "test": "ng test",
+        "server": "json-server --watch db.json"
     },
     "private": true,
     "dependencies": {
@@ -41,6 +42,7 @@
         "@typescript-eslint/parser": "5.62.0",
         "eslint": "^8.44.0",
         "jasmine-core": "~4.6.0",
+        "json-server": "^0.17.3",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.2.0",
         "karma-coverage": "~2.2.0",
