--- a/angular.json
+++ b/angular.json
@@ -73,10 +73,10 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "browserTarget": "splitwise:build:production"
+                          "buildTarget": "splitwise:build:production"
                         },
                         "development": {
-                            "browserTarget": "splitwise:build:development"
+                          "buildTarget": "splitwise:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -84,7 +84,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "splitwise:build"
+                      "buildTarget": "splitwise:build"
                     }
                 },
                 "test": {
