--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngrx/signals": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.1",
@@ -38,6 +42,7 @@
     "@angular/cli": "~17.1.2",
     "@angular/compiler-cli": "^17.1.2",
     "@angular/localize": "^17.1.2",
+    "@ngrx/eslint-plugin": "^17.1.1",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
