--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
