--- a/angular.json
+++ b/angular.json
@@ -36,11 +36,9 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles/main.scss"
+                          "src/styles.scss"
                         ],
-                        "scripts": [
-                            "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-                        ]
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
@@ -101,7 +99,8 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles/main.scss"
+                          "@angular/material/prebuilt-themes/purple-green.css",
+                          "src/styles/main.scss"
                         ],
                         "scripts": []
                     }
