--- a/package.json
+++ b/package.json
@@ -14,21 +14,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.2",
+    "@angular/cdk": "^17.2.1",
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
     "@angular/forms": "^17.1.2",
+    "@angular/material": "^17.2.1",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@ngrx/signals": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "@popperjs/core": "^2.11.8",
-    "@swimlane/ngx-datatable": "^20.1.0",
-    "bootstrap": "^5.3.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
