--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                          "src/styles.scss"
+                          "src/styles/main.scss"
                         ],
                         "scripts": []
                     },
