--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
                         "styles": [
                           "src/styles/main.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
@@ -78,32 +80,6 @@
                         }
                     },
                     "defaultConfiguration": "development"
-                },
-                "extract-i18n": {
-                    "builder": "@angular-devkit/build-angular:extract-i18n",
-                    "options": {
-                      "buildTarget": "splitwise:build"
-                    }
-                },
-                "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
-                    "options": {
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ],
-                        "tsConfig": "tsconfig.spec.json",
-                        "inlineStyleLanguage": "scss",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
-                        "styles": [
-                          "@angular/material/prebuilt-themes/purple-green.css",
-                          "src/styles/main.scss"
-                        ],
-                        "scripts": []
-                    }
                 },
                 "lint": {
                     "builder": "@angular-eslint/builder:lint",
